--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,8 @@ jobs:
           
           # Copy other necessary files
           cp index.html dist/
+          # Include CNAME if present for custom domain
+          if [ -f CNAME ]; then cp CNAME dist/; fi
           
           # (Optional) Add .nojekyll to bypass Jekyll processing (deploy action usually handles this)
           touch dist/.nojekyll
